--- a/dockerfiles/develop-env/ubuntu/debug/Dockerfile
+++ b/dockerfiles/develop-env/ubuntu/debug/Dockerfile
@@ -29,49 +29,15 @@ deb http://cn.archive.ubuntu.com/ubuntu mantic-security main restricted\n\
 deb http://cn.archive.ubuntu.com/ubuntu mantic-security universe\n\
 deb http://cn.archive.ubuntu.com/ubuntu mantic-security multiverse' > /etc/apt/sources.list
 
-# 不知道为什么，这个必须写在这里，否则文件中的内容不会换行，不知道是不是因为把dash改为bash的原因
-# 容器启动后执行：timedatectl set-timezone "Asia/Shanghai" 命令，设置时区为中国
-RUN echo '[Unit]\n\
-Description=sync time\n\
-After=chrony.service\n\
-[Service]\n\
-ExecStart=timedatectl set-timezone "Asia/Shanghai"\n\
-[Install]\n\
-WantedBy=multi-user.target' > /etc/systemd/system/sync-time.service
-
-
 RUN apt update -y && apt upgrade -y
 RUN DEBIAN_FRONTEND=noninteractive TZ=Asia/Shanghai apt -y install tzdata
-RUN apt install -y net-tools telnet sysstat bridge-utils bash-completion vim jq tar openssl iputils-ping lsof git  openssh-server
+RUN apt install -y net-tools telnet sysstat bridge-utils bash-completion vim jq tar openssl iputils-ping lsof git  openssh-server curl
 
 # 切换脚本解释器为bash, Ubuntu默认的脚本解释器为dash
 RUN chsh -s /bin/bash
 
 # github加速（非常重要，否则github下载代码将会相当之慢）
 RUN git config --global url."https://hub.fgit.cf".insteadof "https://github.com"
-
-# shell命令行颜色提示; git分支名自动补全
-# 设置shell提示符颜色 参考链接：https://www.jianshu.com/p/a1d698d1f7c8
-RUN V=$(git -v|awk '{print $3}') && git clone -b v${V} https://github.com/git/git.git
-RUN git clone https://github.com/Dreamacro/clash-ctl.git
-
-
-# RUN echo '\nPS1="\[\e[37m\][\[\e[32m\]\u\[\e[37m\]@\[\e[35m\]\h\[\e[0m\] \[\e[36m\]\w\[\e[0m\]]\\$ "' >> ~/.bashrc
-
-RUN cp git/contrib/completion/git-completion.bash ~/.git-completion.bash && echo '\nsource ~/.git-completion.bash' >> ~/.bashrc  && \
-    cp git/contrib/completion/git-prompt.sh ~/.git-prompt.sh && \
-    cat <<EOF >> ~/.bashrc
-
-GIT_PS1_SHOWDIRTYSTATE=true
-GIT_PS1_SHOWCOLORHINTS=true
-GIT_PS1_SHOWSTASHSTATE=true
-GIT_PS1_SHOWUNTRACKEDFILES=true
-#GIT_PS1_SHOWUPSTREAM=auto
-if [ -f ~/.git-completion.bash ]; then
-  source ~/.git-prompt.sh
-  PROMPT_COMMAND='__git_ps1 "\[\e[37m\][\[\e[32m\]\u\[\e[37m\]@\[\e[35m\]\h\[\e[0m\] \[\e[36m\]\w\[\e[0m\]]" "\\\$ "'
-fi
-EOF
 
 RUN cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 
@@ -96,19 +62,24 @@ if [ -d ~/.vscode-server ];then
 fi
 EOF
 
-# 打开文件监听限制，否则当文件数量过多，linux会限制打开文件数量
-RUN touch /etc/sysctl.conf && \
-    echo "fs.inotify.max_user_watches = 9994288" > /etc/sysctl.conf
+RUN versions='24.0.6' && \
+    priority=1 && for V in ${versions}; do \
+    curl -SL https://download.docker.com/linux/static/stable/x86_64/docker-$V.tgz -o docker-$V.tgz && \
+    mkdir /usr/local/docker-$V && tar -xzf docker-$V.tgz --strip 1 -C /usr/local/docker-$V docker/docker && \
+    update-alternatives --install /usr/bin/docker docker /usr/local/docker-$V/docker $priority && ((priority=priority+1)); done && \
+    update-alternatives --display docker && \
+    rm -rf /usr/libexec/docker/cli-plugins && mkdir -p /usr/libexec/docker/cli-plugins && \
+    curl -SL https://files.m.daocloud.io/github.com/docker/buildx/releases/download/v0.11.2/buildx-v0.11.2.linux-amd64 -o /usr/libexec/docker/cli-plugins/docker-buildx && \
+    chmod +x /usr/libexec/docker/cli-plugins/docker-buildx && \
+    curl -SL https://files.m.daocloud.io/github.com/docker/compose/releases/download/v2.21.0/docker-compose-linux-x86_64 -o /usr/libexec/docker/cli-plugins/docker-compose && \
+    chmod +x /usr/libexec/docker/cli-plugins/docker-compose && \
+    rm -f /root/docker* && docker buildx version
+    # docker 命令补全
+    # curl -L https://raw.gitmirror.com/docker/compose/2.21.0/contrib/completion/bash/docker-compose -o /etc/bash_completion.d/docker-compose && \
+    # source /etc/bash_completion.d/docker-compose
 
-# TODO 解决启动时需要输入命令的问题，systemd应该直接启动
-# TODO 解决进入容器后，exit无法退出问题
-
-
-# docker构建时提示错误：output clipped, log limit 1MiB reached  解决方案如下，分别执行两条命令即可
-# docker buildx create --use --name larger_log --driver-opt env.BUILDKIT_STEP_LOG_MAX_SIZE=50000000
-# docker buildx build --progress plain .
-
-# 测试：    docker run -d --rm --privileged --name debug --cap-add SYS_ADMIN --security-opt seccomp=unconfined --cgroup-parent=docker.slice --cgroupns private --tmpfs /tmp --tmpfs /run --tmpfs /run/lock -p 21800:22 -v /var/run/docker.sock:/var/run/docker.sock ubuntu-debug:v1.0
+# debug命令
+# docker rm -f debug && docker build -t ubuntu-debug:v1.0 --progress=plain . && docker run -d --rm --privileged --name debug --cap-add SYS_ADMIN --security-opt seccomp=unconfined --cgroup-parent=docker.slice --cgroupns private --tmpfs /tmp --tmpfs /run --tmpfs /run/lock -p 21800:22 -v /var/run/docker.sock:/var/run/docker.sock -v /root/workspace:/root/workspace:rw ubuntu-debug:v1.0 && docker exec -it debug bash
 
 # 实际使用：docker run d --name wangmin --privileged --cap-add SYS_ADMIN --security-opt seccomp=unconfined --cgroup-parent=docker.slice --cgroupns private --tmpfs /tmp --tmpfs /run --tmpfs /run/lock -v /var/run/docker.sock:/var/run/docker.sock -v home/wangmin/workspace:/root/workspace:rw -p 2800:22 -p 2810-2820:8010:8020 ubuntu-dev:22.04
 
@@ -116,6 +87,3 @@ RUN touch /etc/sysctl.conf && \
 # 使用systemd启动容器参考连接：https://blog.csdn.net/kencaber/article/details/121980242
 # 参考连接：https://blog.csdn.net/m0_37886429/article/details/80350659?spm=1001.2101.3001.6661.1&utm_medium=distribute.pc_relevant_t0.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-1-80350659-blog-121980242.235%5Ev38%5Epc_relevant_anti_vip&depth_1-utm_source=distribute.pc_relevant_t0.none-task-blog-2%7Edefault%7ECTRLIST%7ERate-1-80350659-blog-121980242.235%5Ev38%5Epc_relevant_anti_vip&utm_relevant_index=1
 CMD [ "/lib/systemd/systemd", "log-level=info", "unit=sysinit.target" ]
-
-# debug命令
-# docker rm -f debug && docker build -t ubuntu-debug:v1.0 . && docker run -d --rm --privileged --name debug --cap-add SYS_ADMIN --security-opt seccomp=unconfined --cgroup-parent=docker.slice --cgroupns private --tmpfs /tmp --tmpfs /run --tmpfs /run/lock -p 21800:22 -v /var/run/docker.sock:/var/run/docker.sock ubuntu-debug:v1.0 && docker exec -it debug bash
