--- a/dockerfiles/develop-env/ubuntu/debug/Dockerfile
+++ b/dockerfiles/develop-env/ubuntu/debug/Dockerfile
@@ -62,25 +62,33 @@ if [ -d ~/.vscode-server ];then
 fi
 EOF
 
+# zsh配置参考链接：https://github.com/skywind3000/vim/blob/master/etc/zshrc.zsh
 RUN apt install zsh autojump -y && chsh -s $(which zsh) && \
-    # 安装ohmyzsh
-    Y | sh -c "$(curl -fsSL https://raw.gitmirror.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" && \
+    # 安装ohmyzsh（使用raw.gitmirror.com加速raw.githubusercontent.com）
+    echo Y | sh -c "$(curl -fsSL https://raw.gitmirror.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" && \
     # 安装powerlevel10k主题
-    git clone https://github.com/romkatv/powerlevel10k.git $ZSH_CUSTOM/themes/powerlevel10k && \
+    # git clone --depth=1 https://github.com/romkatv/powerlevel10k.git ${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/themes/powerlevel10k && \
     # 安装历史命令提示插件
-    git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions && \
+    git clone --depth=1 https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions && \
     # 安装命令行语法高亮插件
-    git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting && \
+    git clone --depth=1 https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting && \
+    # 下载字体
+    # curl -SLO https://raw.gitmirror.com/powerline/powerline/develop/font/10-powerline-symbols.conf && \
+    # curl -SLO https://raw.gitmirror.com/powerline/powerline/develop/font/PowerlineSymbols.otf && \
+    # sudo mkdir /usr/share/fonts/OTF && \
+    # sudo cp 10-powerline-symbols.conf /usr/share/fonts/OTF/  && \
+    # sudo mv 10-powerline-symbols.conf /etc/fonts/conf.d/ && \
+    # sudo mv PowerlineSymbols.otf /usr/share/fonts/OTF/ && \
+    # fc-cache -vf  /usr/share/fonts/OTF/   && \
     # 设置默认主题为powerlevel10k
-    sed -i 's@^ZSH_THEME.*@ZSH_THEME="powerlevel10k/powerlevel10k"@g' ~/.zshrc && \
+    # sed -i 's@^ZSH_THEME.*@ZSH_THEME="powerlevel10k/powerlevel10k"@g' ~/.zshrc && \
+    sed -i 's@^ZSH_THEME.*@ZSH_THEME="dst"@g' ~/.zshrc && \
     # 开启错误命令自动更正
     sed -i 's@#ENABLE_CORRECTION.*@ENABLE_CORRECTION="true"@g' ~/.zshrc && \
     # 在命令执行过程中，使用小红点进行提示
-    sed -i '@#COMPLETION_WAITING_DOTS.*@COMPLETION_WAITING_DOTS="true"@g' ~/.zshrc && \
+    sed -i 's@#COMPLETION_WAITING_DOTS.*@COMPLETION_WAITING_DOTS="true"@g' ~/.zshrc && \
     # 启用安装的插件
-    sed -i 's@plugins.*@plugins=(\n  git extract autojump zsh-autosuggestions zsh-syntax-highlighting\n)@g'  ~/.zshrc
-
-
+    sed -i 's@^plugins.*@plugins=(extract autojump zsh-autosuggestions zsh-syntax-highlighting)@g'  ~/.zshrc
 
 # debug命令
 # docker rm -f debug && docker build -t ubuntu-debug:v1.0 --progress=plain . && docker run -d --rm --privileged --name debug --cap-add SYS_ADMIN --security-opt seccomp=unconfined --cgroup-parent=docker.slice --cgroupns private --tmpfs /tmp --tmpfs /run --tmpfs /run/lock -p 21800:22 -v /var/run/docker.sock:/var/run/docker.sock -v /root/workspace:/root/workspace:rw ubuntu-debug:v1.0 && docker exec -it debug bash
